# practice

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  documents.py  health.py  search.py
backend/app/core/: __init__.py  clients.py  config.py  logging.py  metrics.py
backend/app/models/: __init__.py  database.py  document.py
backend/app/schemas/: __init__.py  document.py  search.py
backend/app/services/: __init__.py  cache.py  chunker.py  document_service.py  elasticsearch_service.py  parser.py
backend/tests/: __init__.py  conftest.py  test_cache.py  test_chunker.py  test_config.py  test_documents_api.py  test_elasticsearch_service.py  test_parser.py  test_search_api.py  test_validation.py
backend/tests/fixtures/: corrupted.docx  empty.docx  generate_fixtures.py  not_allowed.txt  sample_lecture.docx
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: DocumentList.tsx  DropZone.tsx  HighlightedText.tsx  Pagination.tsx  ResultCard.tsx  SearchBar.tsx  SearchResults.tsx  (+2 more)
monitoring/prometheus/: prometheus.yml
qa/: README.md  requirements.txt
qa/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
qa/evaluation/: precision_at_3.py  reference_queries.json
qa/load/: locustfile.py
(+9 files in other folders)
